"""
Spatial Pooling Algorithm

Based on the HTM Spatial Pooling algorithm specification (v0.5).
Implements the four phases: Initialization, Overlap Computation,
Inhibition, and Learning.
"""

from __future__ import annotations

import math
import random
from dataclasses import dataclass, field
from typing import List, Optional

# data structures


@dataclass
class Synapse:
    """A junction between a column's dendritic segment and an input bit.

    States:
        - Connected:   permanence >= connected_perm threshold
        - Potential:   permanence <  connected_perm threshold
        - Unconnected: not in the column's potential synapse list
    """

    source_input: int = 0
    permanence: float = 0.0

    def is_connected(self, connected_perm: float) -> bool:
        """Return True if this synapse is fully connected."""
        raise NotImplementedError

    def is_active(self, input_vector: List[int]) -> bool:
        """Return True if the input connected to this synapse is on."""
        raise NotImplementedError


@dataclass
class Column:
    """A single column mini-column in the HTM region. A column of cells functions as a single computational unit in the Spatial Pooling algorithm."""

    index: int = 0

    # synapse storage
    potential_synapses: List[Synapse] = field(default_factory=list)

    # runtime state
    overlap: float = 0.0
    boost: float = 1.0
    active: bool = False

    # duty cycles
    active_duty_cycle: float = 0.0
    overlap_duty_cycle: float = 0.0

    # helpers

    def connected_synapses(self, connected_perm: float) -> List[Synapse]:
        """Return the subset of potential synapses whose permanence >= connected_perm."""
        raise NotImplementedError

    def get_neighbors(self, all_columns: List["Column"], inhibition_radius: int) -> List["Column"]:
        """Return all columns within inhibition_radius of this column."""
        raise NotImplementedError


# algorithm parameters


@dataclass
class SpatialPoolerParams:
    """All tuneable parameters for the Spatial Pooling algorithm."""

    # structure
    column_dimensions: tuple = (2048,)
    input_dimensions: tuple = (400,)
    potential_radius: int = 16
    potential_pct: float = 0.75  # fraction of inputs within radius to init as potential

    # inhibition
    global_inhibition: bool = True
    num_active_columns_per_inh_area: int = 40
    local_area_density: float = -1.0  # negative means use num_active_columns_per_inh_area
    stimulus_threshold: float = 0.0

    # learning
    syn_perm_active_inc: float = 0.03
    syn_perm_inactive_dec: float = 0.015
    connected_perm: float = 0.2

    # boosting
    boost_strength: float = 0.0
    min_pct_overlap_duty_cycle: float = 0.001
    duty_cycle_period: int = 1000


# spatial pooler


class SpatialPooler:
    """HTM Spatial Pooling algorithm.

    Phases:
        1. Initialization
        2. Overlap computation
        3. Inhibition
        4. Learning
    """

    def __init__(self, params: Optional[SpatialPoolerParams] = None) -> None:
        self.params = params or SpatialPoolerParams()

        self.columns: List[Column] = []
        self.inhibition_radius: int = 0
        self.iteration_num: int = 0

        self._initialize()

    # phase 1 initialization

    def _initialize(self) -> None:
        """
        Create columns and assign initial potential synapses with random permanence values centred around connected_perm.
        Each column gets a random subset of inputs as potential synapses.  Permanence values are biased so that inputs closer to the columns natural centre have higher
        initial permanences.
        """
        raise NotImplementedError

    def _map_column_to_input_center(self, column_index: int) -> int:
        """Map a column index to its natural centre in the input space."""
        raise NotImplementedError

    def _init_permanence(self, column_center: int, input_index: int) -> float:
        """
        Generate an initial permanence value for a potential synapse. Values are drawn from a small range around connected_perm with
        a bias towards the column's natural centre.
        """
        raise NotImplementedError

    # phase 2 overlap computation

    def _compute_overlap(self, input_vector: List[int]) -> None:
        """
        For each column, count its connected synapses that align with active input bits, then multiply by the columns boost factor.
        """
        raise NotImplementedError

    # phase 3 inhibition

    def _inhibit_columns(self) -> List[Column]:
        """
        Determine winning columns after inhibition.
        A column wins if:
            - Its overlap > stimulus_threshold
            - Its overlap >= the kth highest overlap among its neighbours

        Returns the list of active columns.
        """
        raise NotImplementedError

    def _inhibit_columns_global(self) -> List[Column]:
        """Global inhibition: pick the top k columns from the entire region."""
        raise NotImplementedError

    def _inhibit_columns_local(self) -> List[Column]:
        """Local inhibition: pick winners within each columns neighbourhood."""
        raise NotImplementedError

    # phase 4 learning

    def _learn(self, active_columns: List[Column], input_vector: List[int]) -> None:
        """Update synapse permanences, boost values, and inhibition radius."""
        raise NotImplementedError

    def _update_synapse_permanences(self, column: Column, input_vector: List[int]) -> None:
        """Hebbian style learning for a single active column."""
        raise NotImplementedError

    def _update_duty_cycles(self, active_columns: List[Column]) -> None:
        """Update active and overlap duty cycles for all columns."""
        raise NotImplementedError

    def _update_boost_factors(self) -> None:
        """Recompute boost for every column based on duty cycles."""
        raise NotImplementedError

    def _bump_weak_columns(self) -> None:
        """If a columns overlap duty cycle is below its minimum acceptable value, increase all its permanence values."""
        raise NotImplementedError

    def _update_inhibition_radius(self) -> None:
        """Set inhibition_radius to the average connected receptive field size."""
        raise NotImplementedError

    @staticmethod
    def kth_score(columns: List[Column], k: int) -> float:
        """Return the kth highest overlap value among the given columns."""
        raise NotImplementedError

    @staticmethod
    def boost_function(
        active_duty_cycle: float,
        target_duty_cycle: float,
        boost_strength: float,
    ) -> float:
        """Exponential boost function. Returns a scalar > 1 when the column is under active relative to its neighbours, and < 1 when over active."""
        raise NotImplementedError

    def _average_receptive_field_size(self) -> float:
        """Compute the mean connected receptive field radius across all columns."""
        raise NotImplementedError

    @staticmethod
    def _increase_permanences(column: Column, scale_factor: float) -> None:
        """Increase every synapse permanence in column by scale_factor."""
        raise NotImplementedError

    def compute(self, input_vector: List[int], learn: bool = True) -> List[int]:
        """Run one iteration of the Spatial Pooling algorithm.

        Args:
            input_vector: Binary input array.
            learn: If True, update permanences and boost values.

        Returns:
            List of indices of the active columns.
        """
        raise NotImplementedError

    def get_active_columns(self) -> List[int]:
        """Return indices of currently active columns."""
        raise NotImplementedError
